--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-10">
+
+<fieldset type="background" name="bg" parallax>
+            <input type="image" title="Background Image" value="file:///C:/Users/Elizabeth%20M%20Ojugo/AppData/Local/Mobirise.com/Mobirise/projects/project-2020-10-20_122710/assets/images/trea%2050th%20save%20the%20date%20mockup-2000x1506.png" parallax selected>
                 
                 
                 <p class="mbr-text mbr-fonts-style mb-3 display-1"><strong>
